--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "babel-jest": "^23.0.1",
+    "eslint": "^5.0.1",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "react-scripts": "^1.1.4"
